--- a/art3.html
+++ b/art3.html
@@ -54,7 +54,7 @@ a:hover {
 }
 .page {
 	position: relative;
-	max-width: 980px;
+	max-width: 925px;
 	margin: 0 auto;
 	padding: 0 20px 40px;
 }
@@ -478,7 +478,7 @@ a:hover {
 /**/
 /* font awesome */
 /**/
-@font-face
+/* @font-face
 {
 	font-family: 'FontAwesome';
 	src: url('../fonts/fontawesome-webfont.eot?v=3.0.1');
@@ -487,7 +487,7 @@ a:hover {
 	url('../fonts/fontawesome-webfont.ttf?v=3.0.1') format('truetype');
 	font-weight: normal;
 	font-style: normal;
-}
+} */
 
 
 
